syntax = 'proto3';

package protobuf;

message base {
    string service_name = 1;
    int64 timestamp = 2;
}
